## Process this file with automake to produce Makefile.in

## Created by Anjuta

INCLUDES = \
	-DPACKAGE_LOCALE_DIR=\""$(prefix)/$(DATADIRNAME)/locale"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = \
	libDataStruct.la

libDataStruct_la_SOURCES = \
	BSTree.c          \
	CLList.c          \
	DLList.c          \
	DQLList.c          \
	MWTree.c          \
	QLList.c          \
	SLList.c          \
	stack.c          \
	KDTree.c

